시큐리티 적용 페이지 분리

--- a/src/main/resources-dev/templates/index.html
+++ b/src/main/resources-dev/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Welcome</h1>
-<a href="/hello">hello</a>
-<a href="/my">my page</a>
+<a href="/hello">로그인</a>
+<a href="/join">my page</a>
 </body>
 </html>
