--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Welcome</h1>
-<a href="/hello">hello</a>
-<a href="/my">my page</a>
+<a href="/login">로그인</a>
+<a href="/join">회원가입</a>
 </body>
 </html>
